--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "unlink": "npm unlink --no-save okto-sdk-react"
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.7.2",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
-    "okto-sdk-react": "0.1.1",
+    "okto-sdk-react": "0.1.2",
     "react": "^18",
     "react-dom": "^18"
   },
