--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.7.2",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
-    "okto-sdk-react": "0.1.5",
+    "okto-sdk-react": "^0.1.3",
     "react": "^18",
     "react-dom": "^18"
   },
